MDEV-25494 : Assertion `tl->table == __null' failed in bool THD::open_temporary_table(TABLE_LIST*)

There is no need to open or process temporary tables at
wsrep_append_fk_parent_table.